objects/ASI_CRM_TW_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ASI_CRM_MerchTaskReportID__c</fullName>
        <label>Merchandiser Task Report ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_AccMovementbyAccount_ReportID__c</fullName>
        <label>Account Movement by Account ReportID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Account_Movement_ReportID__c</fullName>
        <label>Account Movement ReportID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_ActualOfftake_Offset__c</fullName>
        <label>ActualOfftake - MonthOffset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_CVSDistFacingReport__c</fullName>
        <label>Distribution &amp; Facing Report ( for CVS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_CalSaleVolumeFrom__c</fullName>
        <label>CalSaleVolumeFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_CalSaleVolumeTo__c</fullName>
        <label>CalSaleVolumeTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_ContractTargetReportID__c</fullName>
        <label>Contract Target Progress Report ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_CustomerVisitReport_LastWeek__c</fullName>
        <label>Customer Visit ReportID - Last Week</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_CustomerVisitReport_NextMonth__c</fullName>
        <label>Customer Visit ReportID - Next Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_CustomerVisitReport_ThisWeek__c</fullName>
        <label>Customer Visit ReportID - This Week</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Distance_Tolerance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Distance Tolerance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_ForecastReportFilter0__c</fullName>
        <label>Forecast Report Filter 0</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_ForecastReportFilter1__c</fullName>
        <label>Forecast Report Filter 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_ForecastReportFilter2__c</fullName>
        <label>Forecast Report Filter 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_GMAReport_ThisMonth__c</fullName>
        <label>GMA ReportID - This Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_GMA_Account_Id__c</fullName>
        <label>GMA - Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_GMA_VPD_Id__c</fullName>
        <label>GMA - VPD Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_HomepageToVPDId__c</fullName>
        <label>HomepageToVPDId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_List_of_Outlet_Report_Id__c</fullName>
        <label>List of Outlet Report Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_MerTaskListbyPromo_ReportId__c</fullName>
        <label>Mer Task List by Promotion Report Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Mer_Task_List_Today_Report_Id__c</fullName>
        <label>Merchandiser Task List Today Report Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_MonthlyOfftakeReportID__c</fullName>
        <label>Monthly Offtake ReportID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_MonthlySalesVolReportID__c</fullName>
        <label>Monthly Sales Volume ReportID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_NoOfDays_VPD__c</fullName>
        <label>No. of Days (VPD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_POSM_Image_Account_Id__c</fullName>
        <label>POSM Image Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_PassOrder_Report_ThisMonth_Id__c</fullName>
        <label>Pass Order Report This Month Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Plan_Line_Item_Report_ID__c</fullName>
        <label>Plan Line Item Report ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_PromoStatusReport_ThisMonth__c</fullName>
        <label>Promotion Status ReportID - This Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_PromoStatus_ReportID__c</fullName>
        <label>Promotion Status List Report ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Section_Sponsorship_Display__c</fullName>
        <defaultValue>3</defaultValue>
        <description>The PDF section for PAF &quot;Sponsorship Table&quot; to display. Default is section 3.</description>
        <inlineHelpText>The PDF section for PAF &quot;Sponsorship Table&quot; to display. Default is section 3.</inlineHelpText>
        <label>Section No. For Sponsorship Display</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Visitation_Plan_Outlet_Limit__c</fullName>
        <label>Visitation Plan Outlet Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ASI CRM TW Settings</label>
</CustomObject>